# proactive-seo-blueprint

./: CODEX-PROMPT.md  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
apps/web/: package.json
apps/web/components/: product-app.tsx
contracts/: platform.yaml  reconciliation.md
docs/: 00-master-prd.md  01-architecture.md  04-agent-system.md  07-frontend.md  08-monitoring.md  09-implementation.md  progress.json
infrastructure/kubernetes/argocd/: application.yaml
